--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -19,14 +19,14 @@ a {
 }
 
 .section-tagline {
-   color: var(--color-primary);
+    color: var(--color-primary);
 }
 
 :root {
-    --color-primary: color: #d73953;
-    --color-black: color: #090909;
-    --color-white: color: #ffffff;
-    --color-light-grey: color: #f3f3f3;
-    --color-dark-grey: color: #353535;
+    --color-primary: #d73953;
+    --color-black: #090909;
+    --color-white: #ffffff;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
     --text-color: var(--color-black);
 }
